Front Home update

--- a/MoviePlus Front/css/style.css
+++ b/MoviePlus Front/css/style.css
@@ -23,3 +23,11 @@
 #total {
     font-size: 1.5rem;
 }
+
+.log-out:hover{
+    text-decoration: none;
+}
+
+.list-group-item:hover {
+    cursor: pointer;
+}
