--- a/MoviePlus Front/css/style.css
+++ b/MoviePlus Front/css/style.css
@@ -52,3 +52,13 @@ table .fa:hover {
 .show-image {
     display: none;
 }
+
+.search-title {
+    width: 11rem;
+}
+
+.movie-search-bar {
+    display: none ;
+    width: 50%;
+    margin: 0 auto;
+}
